# dt-report-portal-cli

./: .gitignore  README.md  pyproject.toml  rp-fetch.spec
.github/workflows/: build-release.yml  git-ai.yaml  unittest.yml
dev/: README.md  docker-compose.yml  seed.py
docs/: ReportPortal-CLI-Proxy-Authentication.docx
src/rp_fetch/: __init__.py  auth.py  cli.py  client.py  config.py  downloader.py  fs.py  models.py  proxy_auth.py  search.py
tests/: test_client.py  test_config.py  test_downloader.py  test_fs.py  test_proxy_auth.py
