[project]
name = "rp-fetch"
version = "0.1.0"
description = "CLI tool to bulk-download ReportPortal launch content (logs, attachments, screenshots)"
readme = "README.md"
authors = [
    { name = "B-Yond Engineering", email = "engineering@b-yond.com" }
]
requires-python = ">=3.11"
dependencies = [
    "typer[all]>=0.12",
    "httpx>=0.27",
    "rich>=13",
    "pydantic>=2",
    "tomli-w>=1",
]

[project.scripts]
rp-fetch = "rp_fetch.cli:app"

[build-system]
requires = ["uv_build>=0.8.19,<0.9.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "pytest>=8",
    "pytest-asyncio>=0.23",
    "respx>=0.21",
]
